[gd_scene load_steps=10 format=3 uid="uid://b8tjow5urcoc8"]

[ext_resource type="Texture2D" uid="uid://cwoqleu411dvi" path="res://art/SpriteFrams/Enemy/Skull00.png" id="1_eaxet"]
[ext_resource type="Script" path="res://prefab/Enemy/Enemey.gd" id="1_mg8au"]
[ext_resource type="Texture2D" uid="uid://02ndbd32mgs8" path="res://art/SpriteFrams/Enemy/Skull01.png" id="2_4tm4f"]
[ext_resource type="PackedScene" uid="uid://d21b0ddlr0ntf" path="res://prefab/Item/can_pick_up.tscn" id="4_q3ybg"]
[ext_resource type="Script" path="res://Scripts/Interface/BodyArea.gd" id="5_8e340"]
[ext_resource type="PackedScene" uid="uid://bfmofvyqtmgc" path="res://prefab/Component/move_component.tscn" id="6_ajost"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a30io"]
size = Vector2(15, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_b8ray"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_eaxet")
}, {
"duration": 1.0,
"texture": ExtResource("2_4tm4f")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l6a7c"]
size = Vector2(15, 16)

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 18
script = ExtResource("1_mg8au")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.8, 0.8)
shape = SubResource("RectangleShape2D_a30io")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_b8ray")
frame_progress = 0.22853
flip_h = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="canPickUp" parent="." instance=ExtResource("4_q3ybg")]
targetPosition = Vector2(0, -16)

[node name="BodyArea" type="Area2D" parent="." node_paths=PackedStringArray("movementComponent")]
script = ExtResource("5_8e340")
movementComponent = NodePath("../MoveComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyArea"]
shape = SubResource("RectangleShape2D_l6a7c")

[node name="MoveComponent" parent="." node_paths=PackedStringArray("actor") instance=ExtResource("6_ajost")]
actor = NodePath("..")

[connection signal="timeout" from="HitTimer" to="." method="_hitDisplayEnd"]
[connection signal="area_entered" from="BodyArea" to="BodyArea" method="_on_area_entered"]
